# mosql

./: .gitignore  .gitignore.save  Cargo.toml  LICENSE  README.md  build.go  data.db  go.work  go.work.sum  mix.exs  namespace_schema.json  postgres.yaml  shell.nix  tasks.md
apps/broadway_mongo/: .gitignore  README.md  mix.exs
apps/broadway_mongo/lib/: broadway_mongo.ex
apps/broadway_mongo/test/: broadway_mongo_test.exs
apps/core/: README.md  mix.exs
apps/core/lib/: core.ex  repo.ex
apps/mosql/: mix.exs
apps/mosql/lib/: mosql.ex
apps/pipeline/: mix.exs
apps/pipeline/lib/: pipeline.ex
apps/pipeline/test/: pipeline_test.exs
assets/: tailwind.config.js
cmd/: cli.go  go.mod
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
core/: core.go  go.mod  go.sum  main.go  mongo.go  mongo_test.go  orm.go
core/pkg/model/: model.go
entity/: Cargo.toml
entity/src/: connection.rs  export.rs  mapping.rs  mod.rs  prelude.rs  schema.rs  user.rs
export/: data.go  export.go  full_export.go  go.mod  go.sum
export/internal/core/: core.go  core_test.go
export/internal/mongo/: mongo.go  mongo_test.go
export/pipeline/: pipeline.go
lib/: mosql.ex  mosql_web.ex
lib/mosql/: application.ex  change_stream_producer.ex  export.ex  export_supervisor.ex  full_export.ex  mailer.ex  mongo.ex  postgres.ex  repo.ex  schema.ex  util.ex
lib/mosql_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table_export.rs  m20240502_000159_create_table_user.rs  m20240502_161803_create_table_schema.rs  m20240502_211141_create_table_mapping.rs  m20240502_212411_create_table_connection.rs
mosql_app/: .gitignore  README.md  mix.exs
mosql_app/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
mosql_app/lib/: mosql_app.ex  mosql_app_web.ex
mosql_app/test/: test_helper.exs
mosql_cli/: .gitignore  README.md  mix.exs  mosql_cli
mosql_cli/config/: config.exs
mosql_cli/lib/: mosql_cli.ex
mosql_cli/test/: mosql_cli_test.exs
mosql_core/: .formatter.exs  README.md  mix.exs
mosql_core/lib/: mosql.ex
mosql_core/test/: mosql_test.exs
ms_core/: mix.exs
ms_core/config/: config.exs
ms_core/lib/: mosql.ex
ms_core/test/: mongo_test.exs  mosql_test.exs  schema_sql_test.exs
ms_web/: .gitignore  README.md  mix.exs
ms_web/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
ms_web/lib/: mosql_web.ex  mosql_web_web.ex
ms_web/test/: test_helper.exs
resources/: profiles.json  schema_mapping_sample.json  types.json
schema/: users.json
src/: core.rs  export.rs  main.rs  mongo.rs  mosql.rs  sql.rs
test/: test_helper.exs
test/mosql/: mosql_test.exs
test/support/: conn_case.ex  data_case.ex
(+820 files in other folders)
